syntax = "proto3";

option csharp_namespace = "AutoParts.Web.Protos";

package Common;

enum ResponseStatus {
  OK = 0;
  NOT_FOUND = 1;
  INTERNAL_SERVER_ERROR = 2;
}

message PaginationFilter {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ServiceResponse {
  bool is_error = 1;
  string error_message = 2;
}
